[#61] 폰트 추가하기
### Description
- 한나는 열한살체 추가
- 스포카 한 산스 네오 추가
- PopUp 폰트 변경

### Related Issue
Resolve #61

--- a/Journey/Journey/Sources/ViewControllers/PopUp/PopUpViewController.xib
+++ b/Journey/Journey/Sources/ViewControllers/PopUp/PopUpViewController.xib
@@ -8,6 +8,17 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="BMHANNA_11yrs_otf.otf">
+            <string>BMHANNA11yrsoldOTF</string>
+        </array>
+        <array key="SpoqaHanSansNeo-Bold.otf">
+            <string>SpoqaHanSansNeo-Bold</string>
+        </array>
+        <array key="SpoqaHanSansNeo-Regular.otf">
+            <string>SpoqaHanSansNeo-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="PopUpViewController" customModule="Journey" customModuleProvider="target">
             <connections>
@@ -30,11 +41,11 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YgR-Uh-m6x">
-                    <rect key="frame" x="43" y="227.33333333333334" width="328" height="451.33333333333326"/>
+                    <rect key="frame" x="43" y="229" width="328" height="448"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="인증하기" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L6P-UJ-Jpl">
-                            <rect key="frame" x="29" y="44.999999999999972" width="270" height="29"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                            <rect key="frame" x="29" y="45" width="270" height="29"/>
+                            <fontDescription key="fontDescription" name="BMHANNA11yrsoldOTF" family="BM HANNA 11yrs old OTF" pointSize="24"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
@@ -45,18 +56,18 @@
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="챌린지를 성공해서 소확행을 작성할 수 있어.  나와 함께 쓰러갈래, 쟈기?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6qs-4Q-Jxx">
-                            <rect key="frame" x="22" y="299.66666666666663" width="284" height="33.666666666666686"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                            <nil key="textColor"/>
+                            <rect key="frame" x="22" y="299.66666666666663" width="284" height="30.333333333333314"/>
+                            <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
+                            <color key="textColor" name="Black2Text"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cUv-Ed-G37">
-                            <rect key="frame" x="28" y="351.33333333333326" width="272" height="44"/>
+                            <rect key="frame" x="28" y="348" width="272" height="44"/>
                             <color key="backgroundColor" name="Pink2"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="uTs-gg-Xh3"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                            <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="16"/>
                             <state key="normal" title="작성할게!">
                                 <color key="titleColor" name="White"/>
                             </state>
@@ -65,14 +76,14 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Xe-hI-X8j">
-                            <rect key="frame" x="28" y="397.33333333333326" width="272" height="44"/>
+                            <rect key="frame" x="28" y="394" width="272" height="44"/>
                             <color key="backgroundColor" name="White"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="OHd-Tt-E71"/>
                             </constraints>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                            <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="16"/>
                             <state key="normal" title="나중에">
-                                <color key="titleColor" name="Pink"/>
+                                <color key="titleColor" name="Pink2"/>
                             </state>
                             <connections>
                                 <action selector="touchWhiteButton:" destination="-1" eventType="touchUpInside" id="T03-5K-r84"/>
@@ -103,7 +114,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1PY-Du-VKW">
-                    <rect key="frame" x="128.66666666666666" y="685.66666666666663" width="156.99999999999997" height="41"/>
+                    <rect key="frame" x="128.66666666666666" y="684" width="156.99999999999997" height="41"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="157" id="Lg0-PO-ccS"/>
                         <constraint firstAttribute="height" constant="41" id="YMy-rj-ZW9"/>
@@ -132,8 +143,8 @@
     </objects>
     <resources>
         <image name="journeyMainSampleImg" width="310" height="308"/>
-        <namedColor name="Pink">
-            <color red="0.95300000905990601" green="0.48600000143051147" blue="0.62400001287460327" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="Black2Text">
+            <color red="0.25900000333786011" green="0.25900000333786011" blue="0.25900000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="Pink2">
             <color red="1" green="0.52899998426437378" blue="0.6470000147819519" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
