[#133] SignUpSecond 오토레이아웃 수정
### Description

-  계속하기 버튼 오토레이아웃 수정

Resolve #133

--- a/Journey/Journey/Resources/Storyboards/Auth/SignUpSecond.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/SignUpSecond.storyboard
@@ -58,23 +58,8 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fOd-Q3-Ahn">
-                                <rect key="frame" x="24" y="704" width="327" height="48"/>
-                                <color key="backgroundColor" red="0.90588235294117647" green="0.90588235294117647" blue="0.90588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="327" id="K6B-wl-0q1"/>
-                                    <constraint firstAttribute="height" constant="48" id="yOL-mP-xMK"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                                <state key="normal" title="계속하기">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="touchNextSecondButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="sAu-8S-vMU"/>
-                                </connections>
-                            </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="indicator2" translatesAutoresizingMaskIntoConstraints="NO" id="ntf-KW-2qA">
-                                <rect key="frame" x="165.66666666666666" y="685" width="44" height="8"/>
+                                <rect key="frame" x="165.66666666666666" y="663" width="44" height="8"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="44" id="GwA-Q1-nae"/>
                                     <constraint firstAttribute="height" constant="8" id="iT1-kU-JQG"/>
@@ -108,19 +93,34 @@
                                 <color key="textColor" red="0.92156862745098034" green="0.92156862745098034" blue="0.92156862745098034" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fOd-Q3-Ahn">
+                                <rect key="frame" x="24" y="682" width="327" height="48"/>
+                                <color key="backgroundColor" red="0.90588235294117647" green="0.90588235294117647" blue="0.90588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="9JG-nj-vKg"/>
+                                    <constraint firstAttribute="width" constant="327" id="K6B-wl-0q1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <state key="normal" title="계속하기">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="touchNextSecondButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="sAu-8S-vMU"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="vbb-n0-WeW" secondAttribute="trailing" constant="24" id="0MN-Vp-Xhn"/>
+                            <constraint firstItem="fOd-Q3-Ahn" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="2EU-hG-3eo"/>
                             <constraint firstItem="Ysf-Md-YMZ" firstAttribute="top" secondItem="LEB-Xh-hYy" secondAttribute="bottom" constant="32" id="3TA-er-W3z"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="fOd-Q3-Ahn" secondAttribute="bottom" constant="48" id="3oH-4X-ekX"/>
                             <constraint firstItem="6FF-uY-WfC" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="117" id="7Za-ww-PH2"/>
                             <constraint firstItem="ntf-KW-2qA" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="HGj-3f-fVJ"/>
                             <constraint firstItem="ujk-Ko-azY" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" constant="24" id="HpG-2S-bQn"/>
                             <constraint firstItem="ujk-Ko-azY" firstAttribute="top" secondItem="Ysf-Md-YMZ" secondAttribute="bottom" id="JWP-Rd-R4X"/>
                             <constraint firstItem="6FF-uY-WfC" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="MAL-VW-wF1"/>
-                            <constraint firstAttribute="bottom" secondItem="fOd-Q3-Ahn" secondAttribute="bottom" constant="60" id="Phu-7x-DuZ"/>
-                            <constraint firstItem="fOd-Q3-Ahn" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="SKu-Zr-b1j"/>
                             <constraint firstItem="LEB-Xh-hYy" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="Vf8-Y2-Qnh"/>
                             <constraint firstItem="vbb-n0-WeW" firstAttribute="top" secondItem="6FF-uY-WfC" secondAttribute="bottom" constant="32" id="XpW-UB-34F"/>
                             <constraint firstAttribute="trailing" secondItem="ujk-Ko-azY" secondAttribute="trailing" constant="24" id="Yrr-C5-1xg"/>
@@ -129,9 +129,9 @@
                             <constraint firstItem="vbb-n0-WeW" firstAttribute="leading" secondItem="0XP-e7-Ip8" secondAttribute="trailing" constant="11" id="gUV-wG-dZB"/>
                             <constraint firstItem="6jh-QJ-7WL" firstAttribute="top" secondItem="LEB-Xh-hYy" secondAttribute="bottom" constant="34" id="gun-Cl-3MZ"/>
                             <constraint firstItem="0XP-e7-Ip8" firstAttribute="top" secondItem="6FF-uY-WfC" secondAttribute="bottom" constant="32" id="qIL-Co-zlV"/>
+                            <constraint firstItem="fOd-Q3-Ahn" firstAttribute="top" secondItem="ntf-KW-2qA" secondAttribute="bottom" constant="11" id="qbC-ug-YdC"/>
                             <constraint firstItem="0XP-e7-Ip8" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="tdK-c1-Qvo"/>
                             <constraint firstItem="Ysf-Md-YMZ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="vuD-Fp-Ahu"/>
-                            <constraint firstItem="fOd-Q3-Ahn" firstAttribute="top" secondItem="ntf-KW-2qA" secondAttribute="bottom" constant="11" id="vwD-ga-iKj"/>
                         </constraints>
                     </view>
                     <connections>
