--- a/Journey/Journey/Sources/Cells/CourseLibraryCollectionVIew/DoneCourseCollectionViewCell.xib
+++ b/Journey/Journey/Sources/Cells/CourseLibraryCollectionVIew/DoneCourseCollectionViewCell.xib
@@ -8,80 +8,105 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="BMHANNA_11yrs_otf.otf">
+            <string>BMHANNA11yrsoldOTF</string>
+        </array>
+        <array key="SpoqaHanSansNeo-Bold.otf">
+            <string>SpoqaHanSansNeo-Bold</string>
+        </array>
+        <array key="SpoqaHanSansNeo-Regular.otf">
+            <string>SpoqaHanSansNeo-Regular</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="DoneCourseCollectionViewCell" reuseIdentifier="DoneCourseCollectionViewCell" id="gTV-IL-0wX" customClass="DoneCourseCollectionViewCell" customModule="Journey" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="327" height="306"/>
+            <rect key="frame" x="0.0" y="0.0" width="327" height="316"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="327" height="306"/>
+                <rect key="frame" x="0.0" y="0.0" width="327" height="316"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rFc-Yo-UTI">
-                        <rect key="frame" x="0.0" y="0.0" width="327" height="306"/>
+                        <rect key="frame" x="0.0" y="0.0" width="327" height="316"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oGI-fn-ri7">
-                                <rect key="frame" x="0.0" y="256" width="327" height="50"/>
-                                <color key="backgroundColor" name="doneCourseButton"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="hk1-GH-j6X"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="14"/>
-                                <state key="normal" title="코스 시작하기">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="뽀득뽀득 세균 퇴치" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fZ7-IS-Zhh">
-                                <rect key="frame" x="28" y="36" width="177" height="19.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <rect key="frame" x="28" y="36" width="179" height="21"/>
+                                <fontDescription key="fontDescription" name="BMHANNA11yrsoldOTF" family="BM HANNA 11yrs old OTF" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="일 코스" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3JW-LD-Yf6">
-                                <rect key="frame" x="259" y="43" width="40" height="17"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="14"/>
+                                <rect key="frame" x="257" y="43" width="42" height="18"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HQa-0g-vEg">
-                                <rect key="frame" x="250" y="43" width="9" height="17"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="14"/>
+                                <rect key="frame" x="248.5" y="43" width="8.5" height="18"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="나 쟈니가 인간세계에 처음 도착했을 때 사람들이 청결에 대해 은근히 무심한 것이 신기했쟈니. 내가 사는 별에서는 상상도 할 수 없쟈니." textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qLM-tM-cPP">
-                                <rect key="frame" x="28" y="75.5" width="271" height="66.5"/>
+                                <rect key="frame" x="28" y="82" width="271" height="69"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="waterSampleImg" translatesAutoresizingMaskIntoConstraints="NO" id="k1J-YT-mmS">
-                                <rect key="frame" x="130.5" y="166" width="66" height="66"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="typeSforLibraryGrey" translatesAutoresizingMaskIntoConstraints="NO" id="k1J-YT-mmS">
+                                <rect key="frame" x="125.5" y="171" width="76" height="76"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="66" id="LBQ-53-v1b"/>
-                                    <constraint firstAttribute="width" constant="66" id="RgU-lU-TFS"/>
+                                    <constraint firstAttribute="height" constant="76" id="LBQ-53-v1b"/>
+                                    <constraint firstAttribute="width" constant="76" id="RgU-lU-TFS"/>
                                 </constraints>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ASN-xv-T6P">
+                                <rect key="frame" x="0.0" y="266" width="327" height="50"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="GTO-si-MEZ">
+                                        <rect key="frame" x="116.5" y="16" width="94.5" height="18"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="코스 시작하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wx8-DL-YRL">
+                                                <rect key="frame" x="0.0" y="0.0" width="80.5" height="18"/>
+                                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btnSide" translatesAutoresizingMaskIntoConstraints="NO" id="jKt-gd-60E">
+                                                <rect key="frame" x="82.5" y="3" width="12" height="12"/>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" name="crsD"/>
+                                <constraints>
+                                    <constraint firstItem="GTO-si-MEZ" firstAttribute="centerX" secondItem="ASN-xv-T6P" secondAttribute="centerX" id="ILI-gX-IjL"/>
+                                    <constraint firstItem="GTO-si-MEZ" firstAttribute="centerY" secondItem="ASN-xv-T6P" secondAttribute="centerY" id="NvO-r9-MMH"/>
+                                    <constraint firstAttribute="height" constant="50" id="a1K-jl-TCM"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" name="doneCourseBg"/>
+                        <color key="backgroundColor" name="Grey2Bg"/>
                         <constraints>
-                            <constraint firstItem="oGI-fn-ri7" firstAttribute="top" secondItem="k1J-YT-mmS" secondAttribute="bottom" constant="24" id="GHt-iP-Als"/>
                             <constraint firstItem="fZ7-IS-Zhh" firstAttribute="leading" secondItem="rFc-Yo-UTI" secondAttribute="leading" constant="28" id="Raw-rw-rwV"/>
+                            <constraint firstItem="ASN-xv-T6P" firstAttribute="top" secondItem="k1J-YT-mmS" secondAttribute="bottom" constant="19" id="Xk3-bL-U7p"/>
                             <constraint firstItem="fZ7-IS-Zhh" firstAttribute="top" secondItem="rFc-Yo-UTI" secondAttribute="top" constant="36" id="ZJu-7V-goJ"/>
                             <constraint firstAttribute="trailing" secondItem="qLM-tM-cPP" secondAttribute="trailing" constant="28" id="ZoV-co-k47"/>
-                            <constraint firstAttribute="trailing" secondItem="oGI-fn-ri7" secondAttribute="trailing" id="co6-JG-tq7"/>
-                            <constraint firstAttribute="bottom" secondItem="oGI-fn-ri7" secondAttribute="bottom" id="f1a-WI-iwz"/>
+                            <constraint firstAttribute="trailing" secondItem="ASN-xv-T6P" secondAttribute="trailing" id="aBU-QO-7DB"/>
+                            <constraint firstAttribute="bottom" secondItem="ASN-xv-T6P" secondAttribute="bottom" id="b1I-RT-5lE"/>
+                            <constraint firstItem="ASN-xv-T6P" firstAttribute="leading" secondItem="rFc-Yo-UTI" secondAttribute="leading" id="egU-2K-ikt"/>
                             <constraint firstItem="HQa-0g-vEg" firstAttribute="centerY" secondItem="3JW-LD-Yf6" secondAttribute="centerY" id="fAT-Kn-26e"/>
-                            <constraint firstItem="oGI-fn-ri7" firstAttribute="leading" secondItem="rFc-Yo-UTI" secondAttribute="leading" id="fX5-NT-9P6"/>
-                            <constraint firstItem="qLM-tM-cPP" firstAttribute="top" secondItem="fZ7-IS-Zhh" secondAttribute="bottom" constant="20" id="hAO-Tg-Zdq"/>
+                            <constraint firstItem="qLM-tM-cPP" firstAttribute="top" secondItem="fZ7-IS-Zhh" secondAttribute="bottom" constant="25" id="hAO-Tg-Zdq"/>
                             <constraint firstItem="qLM-tM-cPP" firstAttribute="leading" secondItem="rFc-Yo-UTI" secondAttribute="leading" constant="28" id="hV6-UT-EPL"/>
                             <constraint firstItem="k1J-YT-mmS" firstAttribute="centerX" secondItem="rFc-Yo-UTI" secondAttribute="centerX" id="rw7-dl-aUD"/>
                             <constraint firstAttribute="trailing" secondItem="3JW-LD-Yf6" secondAttribute="trailing" constant="28" id="sCx-B3-TC8"/>
                             <constraint firstItem="3JW-LD-Yf6" firstAttribute="top" secondItem="rFc-Yo-UTI" secondAttribute="top" constant="43" id="v3q-DM-eiD"/>
                             <constraint firstItem="3JW-LD-Yf6" firstAttribute="leading" secondItem="HQa-0g-vEg" secondAttribute="trailing" id="xnx-eX-GRR"/>
-                            <constraint firstItem="k1J-YT-mmS" firstAttribute="top" secondItem="qLM-tM-cPP" secondAttribute="bottom" constant="24" id="xoi-f5-5Jq"/>
+                            <constraint firstItem="k1J-YT-mmS" firstAttribute="top" secondItem="qLM-tM-cPP" secondAttribute="bottom" constant="20" id="xoi-f5-5Jq"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -99,19 +124,21 @@
                 <outlet property="courseDaysLabel" destination="HQa-0g-vEg" id="87k-EM-br4"/>
                 <outlet property="descriptionTextView" destination="qLM-tM-cPP" id="cnz-Za-fNM"/>
                 <outlet property="propertyImageView" destination="k1J-YT-mmS" id="UhB-Gg-NjY"/>
-                <outlet property="startButton" destination="oGI-fn-ri7" id="g3x-0H-1Gm"/>
+                <outlet property="startCourseView" destination="ASN-xv-T6P" id="yha-ef-Rut"/>
+                <outlet property="startLabel" destination="Wx8-DL-YRL" id="6Yu-rJ-raK"/>
                 <outlet property="titleLabel" destination="fZ7-IS-Zhh" id="oFj-6H-2c3"/>
             </connections>
-            <point key="canvasLocation" x="407.24637681159425" y="172.43303571428569"/>
+            <point key="canvasLocation" x="406.52173913043481" y="172.09821428571428"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="waterSampleImg" width="36" height="36"/>
-        <namedColor name="doneCourseBg">
-            <color red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="btnSide" width="12" height="12"/>
+        <image name="typeSforLibraryGrey" width="76" height="76"/>
+        <namedColor name="Grey2Bg">
+            <color red="0.96100002527236938" green="0.96100002527236938" blue="0.96100002527236938" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="doneCourseButton">
-            <color red="0.90588235294117647" green="0.90588235294117647" blue="0.90588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="crsD">
+            <color red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
