--- a/Journey/Journey/Sources/Cells/CourseLibraryCollectionVIew/UndoneCourseCollectionViewCell.xib
+++ b/Journey/Journey/Sources/Cells/CourseLibraryCollectionVIew/UndoneCourseCollectionViewCell.xib
@@ -8,6 +8,14 @@
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="BMHANNA_11yrs_otf.otf">
+            <string>BMHANNA11yrsoldOTF</string>
+        </array>
+        <array key="SpoqaHanSansNeo-Bold.otf">
+            <string>SpoqaHanSansNeo-Bold</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -21,66 +29,80 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9MH-Zf-ZLT">
                         <rect key="frame" x="0.0" y="0.0" width="354" height="306"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="azM-0j-2Wa">
-                                <rect key="frame" x="0.0" y="256" width="354" height="50"/>
-                                <color key="backgroundColor" name="undoneCourseButton"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="T5k-p9-HFG"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="14"/>
-                                <state key="normal" title="코스 시작하기">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="뽀득뽀득 세균 퇴치" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EhB-Zq-yiF">
-                                <rect key="frame" x="28" y="36" width="177" height="19.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <rect key="frame" x="28" y="36" width="179.5" height="18.5"/>
+                                <fontDescription key="fontDescription" name="BMHANNA11yrsoldOTF" family="BM HANNA 11yrs old OTF" pointSize="24"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="일 코스" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CAJ-Sl-3u1">
-                                <rect key="frame" x="286" y="43" width="40" height="17"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="14"/>
+                                <rect key="frame" x="285.5" y="43" width="40.5" height="16.5"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SaW-Qg-0qN">
-                                <rect key="frame" x="277" y="43" width="9" height="17"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="14"/>
+                                <rect key="frame" x="277.5" y="43" width="8" height="16.5"/>
+                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="나 쟈니가 인간세계에 처음 도착했을 때 사람들이 청결에 대해 은근히 무심한 것이 신기했쟈니. 내가 사는 별에서는 상상도 할 수 없쟈니." textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AHc-vq-9d4">
-                                <rect key="frame" x="28" y="75.5" width="298" height="66.5"/>
+                                <rect key="frame" x="28" y="74.5" width="298" height="66.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="textColor" systemColor="labelColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="waterSampleImg" translatesAutoresizingMaskIntoConstraints="NO" id="8xM-Ca-p4y">
-                                <rect key="frame" x="144" y="166" width="66" height="66"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="typeHwithColor" translatesAutoresizingMaskIntoConstraints="NO" id="8xM-Ca-p4y">
+                                <rect key="frame" x="139" y="161" width="76" height="76"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="66" id="TF9-Zh-nAh"/>
-                                    <constraint firstAttribute="width" constant="66" id="kYW-sq-zGB"/>
+                                    <constraint firstAttribute="height" constant="76" id="TF9-Zh-nAh"/>
+                                    <constraint firstAttribute="width" constant="76" id="kYW-sq-zGB"/>
                                 </constraints>
                             </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="usk-wx-1yp">
+                                <rect key="frame" x="0.0" y="256" width="354" height="50"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="bCW-He-NF1">
+                                        <rect key="frame" x="131.5" y="17" width="91" height="16.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="코스 시작하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wpR-bV-dQb">
+                                                <rect key="frame" x="0.0" y="0.0" width="77" height="16.5"/>
+                                                <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="14"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btnSide" translatesAutoresizingMaskIntoConstraints="NO" id="fKL-UD-BOB">
+                                                <rect key="frame" x="79" y="2" width="12" height="12"/>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" name="typeHD"/>
+                                <constraints>
+                                    <constraint firstItem="bCW-He-NF1" firstAttribute="centerX" secondItem="usk-wx-1yp" secondAttribute="centerX" id="C60-Hr-QFq"/>
+                                    <constraint firstItem="bCW-He-NF1" firstAttribute="centerY" secondItem="usk-wx-1yp" secondAttribute="centerY" id="HqH-9n-qwH"/>
+                                    <constraint firstAttribute="height" constant="50" id="qpv-69-DZe"/>
+                                </constraints>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" name="undoneCourseBg"/>
+                        <color key="backgroundColor" name="typeH"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="AHc-vq-9d4" secondAttribute="trailing" constant="28" id="22F-en-ojm"/>
-                            <constraint firstAttribute="bottom" secondItem="azM-0j-2Wa" secondAttribute="bottom" id="2zx-U0-QqJ"/>
                             <constraint firstItem="CAJ-Sl-3u1" firstAttribute="top" secondItem="9MH-Zf-ZLT" secondAttribute="top" constant="43" id="3Hb-sx-CJQ"/>
                             <constraint firstItem="AHc-vq-9d4" firstAttribute="top" secondItem="EhB-Zq-yiF" secondAttribute="bottom" constant="20" id="BZZ-kk-IT9"/>
-                            <constraint firstItem="8xM-Ca-p4y" firstAttribute="top" secondItem="AHc-vq-9d4" secondAttribute="bottom" constant="24" id="Btt-3o-6BA"/>
-                            <constraint firstItem="azM-0j-2Wa" firstAttribute="leading" secondItem="9MH-Zf-ZLT" secondAttribute="leading" id="OOb-2Z-vXw"/>
+                            <constraint firstItem="8xM-Ca-p4y" firstAttribute="top" secondItem="AHc-vq-9d4" secondAttribute="bottom" constant="20" id="Btt-3o-6BA"/>
                             <constraint firstItem="EhB-Zq-yiF" firstAttribute="leading" secondItem="9MH-Zf-ZLT" secondAttribute="leading" constant="28" id="OlZ-4Z-us1"/>
                             <constraint firstItem="EhB-Zq-yiF" firstAttribute="top" secondItem="9MH-Zf-ZLT" secondAttribute="top" constant="36" id="PyB-J2-rZD"/>
-                            <constraint firstAttribute="trailing" secondItem="azM-0j-2Wa" secondAttribute="trailing" id="SRh-Mz-mkE"/>
                             <constraint firstAttribute="trailing" secondItem="CAJ-Sl-3u1" secondAttribute="trailing" constant="28" id="TI3-LO-fzb"/>
+                            <constraint firstAttribute="trailing" secondItem="usk-wx-1yp" secondAttribute="trailing" id="ZMF-cf-eqk"/>
+                            <constraint firstItem="usk-wx-1yp" firstAttribute="leading" secondItem="9MH-Zf-ZLT" secondAttribute="leading" id="fYi-bf-F4E"/>
                             <constraint firstItem="SaW-Qg-0qN" firstAttribute="centerY" secondItem="CAJ-Sl-3u1" secondAttribute="centerY" id="jMs-si-GSK"/>
                             <constraint firstItem="8xM-Ca-p4y" firstAttribute="centerX" secondItem="9MH-Zf-ZLT" secondAttribute="centerX" id="qam-H6-3iD"/>
-                            <constraint firstItem="azM-0j-2Wa" firstAttribute="top" secondItem="8xM-Ca-p4y" secondAttribute="bottom" constant="24" id="uxg-3G-5jf"/>
+                            <constraint firstAttribute="bottom" secondItem="usk-wx-1yp" secondAttribute="bottom" id="sqx-ED-Njf"/>
                             <constraint firstItem="AHc-vq-9d4" firstAttribute="leading" secondItem="9MH-Zf-ZLT" secondAttribute="leading" constant="28" id="wtA-vC-j9F"/>
+                            <constraint firstItem="usk-wx-1yp" firstAttribute="top" secondItem="8xM-Ca-p4y" secondAttribute="bottom" constant="19" id="z6j-hB-mrC"/>
                             <constraint firstItem="CAJ-Sl-3u1" firstAttribute="leading" secondItem="SaW-Qg-0qN" secondAttribute="trailing" id="zkv-W9-N1B"/>
                         </constraints>
                     </view>
@@ -99,19 +121,21 @@
                 <outlet property="courseDaysLabel" destination="SaW-Qg-0qN" id="ttK-96-QIJ"/>
                 <outlet property="descriptionTextView" destination="AHc-vq-9d4" id="aRg-or-aDK"/>
                 <outlet property="propertyImageView" destination="8xM-Ca-p4y" id="wh2-YW-q0l"/>
-                <outlet property="startButton" destination="azM-0j-2Wa" id="Usk-kF-DGE"/>
+                <outlet property="startCourseView" destination="usk-wx-1yp" id="dAU-gF-7hM"/>
+                <outlet property="startLabel" destination="wpR-bV-dQb" id="JHa-9e-rXv"/>
                 <outlet property="titleLabel" destination="EhB-Zq-yiF" id="Nay-GU-oBh"/>
             </connections>
             <point key="canvasLocation" x="352.17391304347831" y="162.72321428571428"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="waterSampleImg" width="36" height="36"/>
-        <namedColor name="undoneCourseBg">
-            <color red="0.94117647058823528" green="0.98431372549019602" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <image name="btnSide" width="12" height="12"/>
+        <image name="typeHwithColor" width="76" height="76"/>
+        <namedColor name="typeH">
+            <color red="1" green="0.94117647058823528" blue="0.89411764705882346" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <namedColor name="undoneCourseButton">
-            <color red="0.72156862745098038" green="0.90588235294117647" blue="0.95686274509803915" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="typeHD">
+            <color red="1" green="0.85490196078431369" blue="0.74117647058823533" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
