[#127] 로그인뷰 키보드 수정

--- a/Journey/Journey/Resources/Storyboards/Auth/Login.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/Login.storyboard
@@ -31,7 +31,7 @@
                                     <constraint firstAttribute="height" constant="40" id="hEg-zm-9rZ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <textInputTraits key="textInputTraits" keyboardType="phonePad" textContentType="email"/>
+                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" textContentType="email"/>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="비밀번호" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="TXe-88-DED">
                                 <rect key="frame" x="24" y="394" width="327" height="40"/>
@@ -40,7 +40,7 @@
                                     <constraint firstAttribute="width" constant="327" id="wcH-jv-lmR"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <textInputTraits key="textInputTraits" keyboardType="emailAddress" secureTextEntry="YES" textContentType="password"/>
+                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K6r-Lj-O8f">
                                 <rect key="frame" x="24" y="461" width="327" height="40"/>
