--- a/Journey/Journey/Resources/Storyboards/Auth/SignUpFirst.storyboard
+++ b/Journey/Journey/Resources/Storyboards/Auth/SignUpFirst.storyboard
@@ -56,7 +56,7 @@
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="new-password"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6lM-AR-6s3">
-                                <rect key="frame" x="24" y="682" width="327" height="48"/>
+                                <rect key="frame" x="24" y="704" width="327" height="48"/>
                                 <color key="backgroundColor" red="0.90588235294117647" green="0.90588235294117647" blue="0.90588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="48" id="WWo-5m-9GH"/>
@@ -82,8 +82,8 @@
                                 <color key="textColor" systemColor="systemGreenColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="indicator" translatesAutoresizingMaskIntoConstraints="NO" id="Y7A-bf-DGI">
-                                <rect key="frame" x="165" y="666" width="44" height="8"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="indicator" translatesAutoresizingMaskIntoConstraints="NO" id="Y7A-bf-DGI">
+                                <rect key="frame" x="165.66666666666666" y="685" width="44" height="8"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="8" id="PGK-ng-CoU"/>
                                     <constraint firstAttribute="width" constant="44" id="hrT-al-LDH"/>
@@ -96,7 +96,7 @@
                             <constraint firstItem="xv1-7P-DjF" firstAttribute="trailing" secondItem="GZh-YO-r6P" secondAttribute="trailing" id="3kn-JY-940"/>
                             <constraint firstItem="4En-Ik-DT9" firstAttribute="leading" secondItem="GZh-YO-r6P" secondAttribute="leading" id="5cr-Lc-AzV"/>
                             <constraint firstItem="4En-Ik-DT9" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="104" id="9px-oV-OVR"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="6lM-AR-6s3" secondAttribute="bottom" constant="48" id="D7t-yg-KA9"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="6lM-AR-6s3" secondAttribute="bottom" constant="26" id="D7t-yg-KA9"/>
                             <constraint firstItem="GZh-YO-r6P" firstAttribute="top" secondItem="4En-Ik-DT9" secondAttribute="bottom" constant="30" id="LCe-Qb-XdF"/>
                             <constraint firstItem="53R-c3-5Kt" firstAttribute="top" secondItem="Vzx-nN-o6L" secondAttribute="bottom" constant="23" id="OTy-o9-PX8"/>
                             <constraint firstItem="6lM-AR-6s3" firstAttribute="top" secondItem="Y7A-bf-DGI" secondAttribute="bottom" constant="11" id="OjQ-Wd-sTA"/>
